--- a/index.html
+++ b/index.html
@@ -7,38 +7,43 @@
 		<link rel="stylesheet" type="text/css" href="styles.css" />
 	</head>
 	<body>
-		<div id="content">
-			<div id="table">
-				<div id="calculator">
-					<h1>Calculator</h1>
-					<p id="screen">0</p>
-					<div id="button-pad">
-						<button class="function">AC</button>
-						<button class="function">DEL</button>
-						<button class="operation">%</button>
-						<button class="operation">/</button>
+		<div id="background">
+			<div id="content">
+				<div id="table">
+					<div id="calculator">
+						<h1>Calculator</h1>
+						<p id="screen">0</p>
+						<div id="button-pad">
+							<button class="function">AC</button>
+							<button class="function">DEL</button>
+							<button class="operation">%</button>
+							<button class="operation">/</button>
 
-						<button class="number">7</button>
-						<button class="number">8</button>
-						<button class="number">9</button>
-						<button class="operation">*</button>
+							<button class="number">7</button>
+							<button class="number">8</button>
+							<button class="number">9</button>
+							<button class="operation">*</button>
 
-						<button class="number">4</button>
-						<button class="number">5</button>
-						<button class="number">6</button>
-						<button class="operation">+</button>
+							<button class="number">4</button>
+							<button class="number">5</button>
+							<button class="number">6</button>
+							<button class="operation">+</button>
 
-						<button class="number">1</button>
-						<button class="number">2</button>
-						<button class="number">3</button>
-						<button class="operation">-</button>
+							<button class="number">1</button>
+							<button class="number">2</button>
+							<button class="number">3</button>
+							<button class="operation">-</button>
 
-						<button class="function">±</button>
-						<button class="number">0</button>
-						<button class="number">.</button>
-						<button class="equal">=</button>
+							<button class="function">±</button>
+							<button class="number">0</button>
+							<button class="number">.</button>
+							<button class="equal">=</button>
+						</div>
 					</div>
 				</div>
+				<footer>
+					<p>Developed by Viktor Sharha in June 2024</p>
+				</footer>
 			</div>
 		</div>
 		<script src="script.js"></script>
