--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<meta name="viewport" content="width=device-width" />
 		<title>Calculator</title>
 		<link rel="stylesheet" type="text/css" href="styles.css" />
+
+		<link rel="icon" type="image/x-icon" href="./favicon.ico" />
 	</head>
 	<body>
 		<div id="content">
