--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 					</div>
 				</div>
 			</div>
-			<footer>
+			<!-- <footer>
 				<p>Developed by Viktor Sharha in June 2024</p>
-			</footer>
+			</footer> -->
 		</div>
 		<script src="script.js"></script>
 	</body>
