--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
 				<p>Developed by Viktor Sharha in June 2024</p>
 			</footer> -->
 		</div>
-		<script src="script.js"></script>
+		<script src="built/script.js"></script>
 	</body>
 </html>
