added source code button

--- a/index.html
+++ b/index.html
@@ -7,45 +7,65 @@
 		<link rel="stylesheet" type="text/css" href="styles.css" />
 
 		<link rel="icon" type="image/x-icon" href="./favicon.ico" />
+		<link
+			rel="stylesheet"
+			type="text/css"
+			href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
+		/>
 	</head>
 	<body>
-		<div id="content">
-			<div id="table">
-				<div id="calculator">
-					<h1>Calculator</h1>
-					<p id="screen">0</p>
-					<div id="button-pad">
-						<button class="function">AC</button>
-						<button class="function">DEL</button>
-						<button class="operation">%</button>
-						<button class="operation">/</button>
+		<div id="calculator-app">
+			<div id="content">
+				<div id="table">
+					<div id="calculator">
+						<h1>Calculator</h1>
+						<p id="screen">0</p>
+						<div id="button-pad">
+							<button class="function">AC</button>
+							<button class="function">DEL</button>
+							<button class="operation">%</button>
+							<button class="operation">/</button>
 
-						<button class="number">7</button>
-						<button class="number">8</button>
-						<button class="number">9</button>
-						<button class="operation">*</button>
+							<button class="number">7</button>
+							<button class="number">8</button>
+							<button class="number">9</button>
+							<button class="operation">*</button>
 
-						<button class="number">4</button>
-						<button class="number">5</button>
-						<button class="number">6</button>
-						<button class="operation">+</button>
+							<button class="number">4</button>
+							<button class="number">5</button>
+							<button class="number">6</button>
+							<button class="operation">+</button>
 
-						<button class="number">1</button>
-						<button class="number">2</button>
-						<button class="number">3</button>
-						<button class="operation">-</button>
+							<button class="number">1</button>
+							<button class="number">2</button>
+							<button class="number">3</button>
+							<button class="operation">-</button>
 
-						<button class="function">±</button>
-						<button class="number">0</button>
-						<button class="number">.</button>
-						<button class="equal">=</button>
+							<button class="function">±</button>
+							<button class="number">0</button>
+							<button class="number">.</button>
+							<button class="equal">=</button>
+						</div>
 					</div>
 				</div>
-			</div>
-			<!-- <footer>
+				<!-- <footer>
 				<p>Developed by Viktor Sharha in June 2024</p>
 			</footer> -->
+			</div>
 		</div>
+		<div class="github">
+			<div>
+				<a href="https://github.com/vsharha/Hangman" target="_blank">
+					<div><i class="fa-brands fa-github"></i>Source Code</div>
+				</a>
+				<p>Developed by Viktor Sharha</p>
+			</div>
+		</div>
+
 		<script src="built/script.js"></script>
+		<script
+			src="https://kit.fontawesome.com/61b5dda9f4.js"
+			crossorigin="anonymous"
+		></script>
 	</body>
 </html>
