--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		</div>
 		<div class="github">
 			<div>
-				<a href="https://github.com/vsharha/Hangman" target="_blank">
+				<a href="https://github.com/vsharha/Calculator" target="_blank">
 					<div><i class="fa-brands fa-github"></i>Source Code</div>
 				</a>
 				<p>Developed by Viktor Sharha</p>
