--- a/index.html
+++ b/index.html
@@ -58,7 +58,12 @@
 				<a href="https://github.com/vsharha/Calculator" target="_blank">
 					<div><i class="fa-brands fa-github"></i>Source Code</div>
 				</a>
-				<p>Developed by Viktor Sharha</p>
+				<p>
+					Developed by
+					<a href="https://viktorsharha.com" target="_blank">
+						Viktor Sharha</a
+					>
+				</p>
 			</div>
 		</div>
 
